After adding comparision, before cleaning the code

--- a/model_builder.ipynb
+++ b/model_builder.ipynb
@@ -27,9 +27,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSet = loadData(\"normalized_data_set\")\n",
-    "sequenceLen = dataSet.shape[1]\n",
-    "dimensionsCount = dataSet.shape[2]"
+    "config = loadData(\"config\")\n",
+    "dataSetSize = config[\"dataSetSize\"]\n",
+    "testSetBenignSize = config[\"testSetBenignSize\"]\n",
+    "validationSetSize = config[\"validationSetSize\"]\n",
+    "trainingSetSize = config[\"trainingSetSize\"]\n",
+    "sequenceLen = config[\"sequenceLen\"]\n",
+    "dimensionsCount = config[\"dimensionsCount\"]"
    ]
   },
   {
