--- a/attack_data_set_builder.ipynb
+++ b/attack_data_set_builder.ipynb
@@ -6,14 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.io\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import tqdm\n",
-    "import random\n",
-    "from utilities import *\n",
-    "from datasetVariables import *"
+    "from MZPackage.DataPreprocessor import DataPreprocessor"
    ]
   },
   {
@@ -22,111 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalizeDataSet(dataArray):    \n",
-    "    normalizationParameters = loadData(\"normalization_parameters\")    \n",
-    "    divI = normalizationParameters[\"divI\"]\n",
-    "    divPhase = normalizationParameters[\"divPhase\"]\n",
-    "    dataArray[:,:,0:6,0] = dataArray[:,:,0:6,0]/divI\n",
-    "    dataArray[:,:,6:9,0] = dataArray[:,:,6:9,0]/divPhase    \n",
-    "    return dataArray"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getBenignData(featureTitleList):\n",
-    "    dataList = []\n",
-    "    for faultType in os.listdir(rawDataDir):\n",
-    "        faultTypeDir = '/'.join([rawDataDir,faultType])\n",
-    "        if(os.path.isdir(faultTypeDir)):\n",
-    "            for generationLevel in os.listdir(faultTypeDir):\n",
-    "                generationLevelDir = '/'.join([faultTypeDir,generationLevel]) \n",
-    "                if(os.path.isdir(generationLevelDir)):\n",
-    "                    ttl = len(os.listdir(generationLevelDir))\n",
-    "                    with tqdm.tqdm(total=ttl) as p_bar:                             \n",
-    "                        processed = 0;\n",
-    "                        for dirName in os.listdir(generationLevelDir):\n",
-    "                            dataDir = '/'.join([generationLevelDir,dirName])                                                    \n",
-    "                            for fileName in os.listdir(dataDir):\n",
-    "                                filePath = '/'.join([dataDir,fileName]) \n",
-    "                                mat = scipy.io.loadmat(filePath)                               \n",
-    "                                toAddSubSequence = []                                \n",
-    "                                faultIndex = mat[\"Fault_Index\"][0][0]                                                                  \n",
-    "                                randInt = random.randint(1,101)\n",
-    "                                startIndex = 500 + randInt\n",
-    "                                endIndex = 700 + randInt                                    \n",
-    "                                for feature in featureTitleList:  \n",
-    "                                    toAppendArr = mat[feature][startIndex:endIndex]                                                                        \n",
-    "                                    toAddSubSequence.append(toAppendArr) \n",
-    "                                dataList.append(toAddSubSequence)                            \n",
-    "                            p_bar.update(1)    \n",
-    "    return np.swapaxes(np.array(dataList), 1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getShiftedAngleData(featureTitleList, featuresToShift, count, shiftRange = 40):\n",
-    "    dataList = []\n",
-    "    for faultType in os.listdir(rawDataDir):\n",
-    "        faultTypeDir = '/'.join([rawDataDir,faultType])\n",
-    "        if(os.path.isdir(faultTypeDir)):\n",
-    "            for generationLevel in os.listdir(faultTypeDir):\n",
-    "                generationLevelDir = '/'.join([faultTypeDir,generationLevel]) \n",
-    "                if(os.path.isdir(generationLevelDir)):      \n",
-    "                    ttl = len(os.listdir(generationLevelDir)) \n",
-    "                    with tqdm.tqdm(total=ttl) as p_bar:                             \n",
-    "                        processed = 0;\n",
-    "                        for dirName in os.listdir(generationLevelDir):\n",
-    "                            dataDir = '/'.join([generationLevelDir,dirName])                                                    \n",
-    "                            for fileName in os.listdir(dataDir):\n",
-    "                                filePath = '/'.join([dataDir,fileName]) \n",
-    "                                mat = scipy.io.loadmat(filePath)                               \n",
-    "                                toAddSubSequence = []                                                                                                                                  \n",
-    "                                randInt = random.randint(1,101)\n",
-    "                                startIndex = 500 + randInt\n",
-    "                                endIndex = 700 + randInt    \n",
-    "                                shiftBy = random.randint(20,shiftRange)\n",
-    "                                for feature in featureTitleList:  \n",
-    "                                    toAppendArr = mat[feature][startIndex:endIndex]                                    \n",
-    "                                    if(feature in featuresToShift):\n",
-    "                                        shiftedHalfStartIndex = int(startIndex+sequenceLen/2-shiftBy)\n",
-    "                                        shiftedHalfEndIndex = int(endIndex-shiftBy)\n",
-    "                                        attackStartIndex = int(sequenceLen/2)\n",
-    "                                        toAppendArr[attackStartIndex:] = mat[feature][shiftedHalfStartIndex:shiftedHalfEndIndex]\n",
-    "                                    toAddSubSequence.append(toAppendArr) \n",
-    "                                dataList.append(toAddSubSequence)                                                        \n",
-    "                            p_bar.update(1) \n",
-    "    smapledList = random.sample(dataList, count)\n",
-    "    return np.swapaxes(np.array(smapledList), 1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getRandomFDIAttackData(featuresIndexesToAttack, count):\n",
-    "    benignData = loadData(\"normalized_benign_data_set\")\n",
-    "    sampledBenignDataList = random.sample(list(benignData), count)\n",
-    "    sampledBenignDataArr = np.array(sampledBenignDataList)\n",
-    "    ttl = len(sampledBenignDataArr)\n",
-    "    with tqdm.tqdm(total=ttl) as p_bar:              \n",
-    "        processed = 0;  \n",
-    "        for dataSeq in sampledBenignDataArr:                                                                                                        \n",
-    "            for featureIndex in featuresIndexesToAttack:  \n",
-    "                randArr = np.random.rand(count,sequenceLen)                \n",
-    "                sampledBenignDataArr[:,:,featureIndex,0] = randArr                                                                 \n",
-    "            p_bar.update(1) # One is processed\n",
-    "            \n",
-    "    return sampledBenignDataArr"
+    "dp = DataPreprocessor()"
    ]
   },
   {
@@ -136,8 +25,8 @@
    "outputs": [],
    "source": [
     "# get benign data and save \n",
-    "benignData = getBenignData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"])\n",
-    "normalizedBenignData = normalizeDataSet(benignData.copy())\n",
+    "benignData = dp.getBenignData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"])\n",
+    "normalizedBenignData = dp.normalizeDataSetUsingSavedParams(benignData.copy())\n",
     "saveData(normalizedBenignData, \"normalized_benign_data_set\")"
    ]
   },
@@ -148,58 +37,35 @@
    "outputs": [],
    "source": [
     "# generate FDI attack data and save\n",
-    "# generate angle shift attack data and save\n",
-    "FDIAttackData = getRandomFDIAttackData([0,1,2],1000)\n",
+    "FDIAttackData = dp.getRandomFDIAttackData([0,1,2],1000)\n",
     "saveData(FDIAttackData, \"normalized_fdi_attack_data_set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:23<00:00,  1.50it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:47<00:00,  1.29it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [03:13<00:00,  1.12it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [03:47<00:00,  1.05s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate angle shift attack data and save\n",
-    "angleShiftAttackData = getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
+    "angleShiftAttackData = dp.getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
     "                                  ,[\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
     "                                  ,1000)\n",
-    "normalizedAngleShiftAttackData = normalizeDataSet(angleShiftAttackData.copy())\n",
+    "normalizedAngleShiftAttackData = dp.normalizeDataSetUsingSavedParams(angleShiftAttackData.copy())\n",
     "saveData(normalizedAngleShiftAttackData, \"normalized_angle_shift_attack_data_set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:19<00:00,  1.54it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:33<00:00,  1.41it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:51<00:00,  1.26it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 216/216 [02:22<00:00,  1.52it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Time sync attack\n",
-    "timeSyncAttackData = getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
+    "timeSyncAttackData = dp.getShiftedAngleData([\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"Iprobe2_a\",\"Iprobe2_b\",\"Iprobe2_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
     "                                  ,[\"Iprobe1_a\",\"Iprobe1_b\",\"Iprobe1_c\",\"PhaseAngle_a\",\"PhaseAngle_b\",\"PhaseAngle_c\"]\n",
     "                                  ,1000)\n",
-    "normalizedTimeSyncAttackData = normalizeDataSet(timeSyncAttackData.copy())\n",
+    "normalizedTimeSyncAttackData = dp.normalizeDataSetUsingSavedParams(timeSyncAttackData.copy())\n",
     "saveData(normalizedTimeSyncAttackData, \"normalized_time_sync_attack_data_set\")"
    ]
   },
