--- a/model_tester_on_adversarial_secure.ipynb
+++ b/model_tester_on_adversarial_secure.ipynb
@@ -6,19 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.models import Sequential, load_model\n",
-    "from tensorflow.keras.layers import Dense, Activation, LSTM, Flatten, Reshape\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tensorflow.python.keras import backend as K\n",
-    "import gc\n",
-    "import tensorflow as tf\n",
-    "import random\n",
-    "from sklearn import preprocessing\n",
-    "import pickle\n",
-    "from utilities import *"
+    "from MZPackage.ModelBuilder import ModelBuilder\n",
+    "from MZPackage.Utilities import *"
    ]
   },
   {
@@ -27,15 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load config\n",
-    "config = loadData(\"config\")\n",
-    "dataSetSize = config[\"dataSetSize\"]\n",
-    "testSetBenignSize = config[\"testSetBenignSize\"]\n",
-    "validationSetSize = config[\"validationSetSize\"]\n",
-    "trainingSetSize = config[\"trainingSetSize\"]\n",
-    "sequenceLen = config[\"sequenceLen\"]\n",
-    "dimensionsCount = config[\"dimensionsCount\"]\n",
-    "adversarialTestSetSize = config[\"adversarialTestSetSize\"]"
+    "mb = ModelBuilder()"
    ]
   },
   {
@@ -65,44 +46,19 @@
      "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "minPositiveMSE 0.0032279734131176706\n",
-      "maxNegativeMSE 0.0015371517642618381\n",
-      "Threshold is  0.0017062339291474215\n",
+      "Min reconstruction error for anomalies:  0.0012496358692751217\n",
+      "max reconstruction error for benign:  0.0011677688693006027\n",
+      "Selected threshold:  0.0011759555692980547\n",
       "Precision by threshold is:  1.0\n",
       "Recall by threshold is:  1.0\n"
      ]
     }
    ],
    "source": [
-    "adversarialSet = loadData(\"adversarial_data_set_pca\")\n",
-    "advSetSize = len(adversarialSet)\n",
-    "advTestSet = adversarialSet[advSetSize - adversarialTestSetSize:]\n",
-    "_,benignTestSet,_ = getReshapedDataSet(loadData(\"normalized_data_set\"), \"PCA\")\n",
-    "test_labels = np.concatenate((np.ones(len(advTestSet)),np.zeros(len(benignTestSet))))\n",
-    "testSet = np.concatenate((getReshapedTestSet(advTestSet, \"PCA\"),benignTestSet))\n",
-    "\n",
-    "precisions = []\n",
-    "recalls = []\n",
-    "model = load_model('Trained_Model/pca_adv.h5')\n",
-    "predicted = model.predict(testSet)\n",
-    "mse = (np.square(testSet - predicted)).mean(axis=1)\n",
-    "mse_label = np.vstack((mse, test_labels)).T\n",
-    "precision, recall, minPositiveMSE, maxNegativeMSE = rankedPrecisionAndRecall(mse_label)\n",
-    "precisions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "PCAPrecisions_domain = precisions\n",
-    "thre = calculateThreshold(minPositiveMSE,maxNegativeMSE)\n",
-    "thresholds[\"PCA_adv\"] = thre\n",
-    "saveData(thresholds,\"thresholds\")\n",
-    "precisionThre, recallThre = rankedPrecisionAndRecallWithThreshold(mse_label,thre)\n",
-    "\n",
-    "print(\"Precision without threshold is: \", precision)\n",
-    "print(\"Recall without threshold is: \", recall)\n",
-    "print(\"minPositiveMSE\",minPositiveMSE)\n",
-    "print(\"maxNegativeMSE\",maxNegativeMSE)\n",
-    "print(\"Threshold is \", thre)\n",
-    "print(\"Precision by threshold is: \", precisionThre)\n",
-    "print(\"Recall by threshold is: \", recallThre)"
+    "modelType = \"pca\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
   {
@@ -114,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,42 +79,19 @@
      "text": [
       "Precision without threshold is:  1.0\n",
       "Recall without threshold is:  1.0\n",
-      "minPositiveMSE 0.003073575349258088\n",
-      "maxNegativeMSE 0.0010811324296685183\n",
-      "Threshold is  0.0013730668853040838\n",
+      "Min reconstruction error for anomalies:  0.001349663181208897\n",
+      "max reconstruction error for benign:  0.0012662559851134608\n",
+      "Selected threshold:  0.0012745967047230044\n",
       "Precision by threshold is:  1.0\n",
       "Recall by threshold is:  1.0\n"
      ]
     }
    ],
    "source": [
-    "adversarialSet = loadData(\"adversarial_data_set_fullyConnected\")\n",
-    "advSetSize = len(adversarialSet)\n",
-    "advTestSet = adversarialSet[advSetSize - adversarialTestSetSize:]\n",
-    "_,benignTestSet,_ = getReshapedDataSet(loadData(\"normalized_data_set\"), \"fullyConnected\")\n",
-    "test_labels = np.concatenate((np.ones(len(advTestSet)),np.zeros(len(benignTestSet))))\n",
-    "testSet = np.concatenate((getReshapedTestSet(advTestSet, \"fullyConnected\"),benignTestSet))\n",
-    "\n",
-    "precisions = []\n",
-    "recalls = []\n",
-    "model = load_model('Trained_Model/autoencoder_adv.h5')\n",
-    "predicted = model.predict(testSet)\n",
-    "mse = (np.square(testSet - predicted)).mean(axis=1)\n",
-    "mse_label = np.vstack((mse, test_labels)).T\n",
-    "precision, recall, minPositiveMSE, maxNegativeMSE = rankedPrecisionAndRecall(mse_label)\n",
-    "precisions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "PCAPrecisions_domain = precisions\n",
-    "thre = thresholds[\"fullyConnected\"]\n",
-    "precisionThre, recallThre = rankedPrecisionAndRecallWithThreshold(mse_label,thre)\n",
-    "\n",
-    "print(\"Precision without threshold is: \", precision)\n",
-    "print(\"Recall without threshold is: \", recall)\n",
-    "print(\"minPositiveMSE\",minPositiveMSE)\n",
-    "print(\"maxNegativeMSE\",maxNegativeMSE)\n",
-    "print(\"Threshold is \", thre)\n",
-    "print(\"Precision by threshold is: \", precisionThre)\n",
-    "print(\"Recall by threshold is: \", recallThre)"
+    "modelType = \"fullyConnected\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
   {
@@ -170,52 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision without threshold is:  0.9157509157509157\n",
-      "Recall without threshold is:  0.9157509157509157\n",
-      "minPositiveMSE 0.0022853074886004694\n",
-      "maxNegativeMSE 8.91216968976937e-05\n",
-      "Threshold is  3.693430875407472e-05\n",
-      "Precision by threshold is:  0.9157509157509157\n",
+      "Precision without threshold is:  1.0\n",
+      "Recall without threshold is:  1.0\n",
+      "Min reconstruction error for anomalies:  3.616080544701276e-05\n",
+      "max reconstruction error for benign:  3.451640304838982e-05\n",
+      "Selected threshold:  3.4680843288252115e-05\n",
+      "Precision by threshold is:  1.0\n",
       "Recall by threshold is:  1.0\n"
      ]
     }
    ],
    "source": [
-    "adversarialSet = loadData(\"adversarial_data_set_conv\")\n",
-    "advSetSize = len(adversarialSet)\n",
-    "advTestSet = adversarialSet[advSetSize - adversarialTestSetSize:]\n",
-    "_,benignTestSet,_ = getReshapedDataSet(loadData(\"normalized_data_set\"), \"1DConv\")\n",
-    "test_labels = np.concatenate((np.ones(len(advTestSet)),np.zeros(len(benignTestSet))))\n",
-    "testSet = np.concatenate((getReshapedTestSet(advTestSet, \"1DConv\"),benignTestSet))\n",
-    "\n",
-    "precisions = []\n",
-    "recalls = []\n",
-    "model = load_model('Trained_Model/conv_adv.h5')\n",
-    "predicted = model.predict(testSet)\n",
-    "mse = (np.square(testSet - predicted)).mean(axis=1)\n",
-    "mse = mse.reshape(len(testSet)) # for conv only\n",
-    "mse_label = np.vstack((mse, test_labels)).T\n",
-    "precision, recall, minPositiveMSE, maxNegativeMSE = rankedPrecisionAndRecall(mse_label)\n",
-    "precisions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "PCAPrecisions_domain = precisions\n",
-    "thre = thresholds[\"1DConv\"]\n",
-    "precisionThre, recallThre = rankedPrecisionAndRecallWithThreshold(mse_label,thre)\n",
-    "\n",
-    "print(\"Precision without threshold is: \", precision)\n",
-    "print(\"Recall without threshold is: \", recall)\n",
-    "print(\"minPositiveMSE\",minPositiveMSE)\n",
-    "print(\"maxNegativeMSE\",maxNegativeMSE)\n",
-    "print(\"Threshold is \", thre)\n",
-    "print(\"Precision by threshold is: \", precisionThre)\n",
-    "print(\"Recall by threshold is: \", recallThre)"
+    "modelType = \"conv\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
   {
@@ -227,51 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision without threshold is:  0.15318627450980393\n",
-      "Recall without threshold is:  0.15318627450980393\n",
-      "minPositiveMSE 0.014541888110610808\n",
-      "maxNegativeMSE 0.003002605852733423\n",
-      "Threshold is  1.0687692541864324e-05\n",
-      "Precision by threshold is:  0.15318627450980393\n",
+      "Precision without threshold is:  1.0\n",
+      "Recall without threshold is:  1.0\n",
+      "Min reconstruction error for anomalies:  1.0538012298846228e-05\n",
+      "max reconstruction error for benign:  1.0025960172065749e-05\n",
+      "Selected threshold:  1.0077165384743796e-05\n",
+      "Precision by threshold is:  1.0\n",
       "Recall by threshold is:  1.0\n"
      ]
     }
    ],
    "source": [
-    "adversarialSet = loadData(\"adversarial_data_set_lstm\")\n",
-    "advSetSize = len(adversarialSet)\n",
-    "advTestSet = adversarialSet[advSetSize - adversarialTestSetSize:]\n",
-    "_,benignTestSet,_ = getReshapedDataSet(loadData(\"normalized_data_set\"), \"LSTM\")\n",
-    "test_labels = np.concatenate((np.ones(len(advTestSet)),np.zeros(len(benignTestSet))))\n",
-    "testSet = np.concatenate((getReshapedTestSet(advTestSet, \"LSTM\"),benignTestSet))\n",
-    "\n",
-    "precisions = []\n",
-    "recalls = []\n",
-    "model = load_model('Trained_Model/lstm_adv.h5')\n",
-    "predicted = model.predict(testSet)\n",
-    "mse = (np.square(testSet - predicted)).mean(axis=2).mean(axis=1)\n",
-    "mse_label = np.vstack((mse, test_labels)).T\n",
-    "precision, recall, minPositiveMSE, maxNegativeMSE = rankedPrecisionAndRecall(mse_label)\n",
-    "precisions.append(precision)\n",
-    "recalls.append(recall)\n",
-    "PCAPrecisions_domain = precisions\n",
-    "thre = thresholds[\"LSTM\"]\n",
-    "precisionThre, recallThre = rankedPrecisionAndRecallWithThreshold(mse_label,thre)\n",
-    "\n",
-    "print(\"Precision without threshold is: \", precision)\n",
-    "print(\"Recall without threshold is: \", recall)\n",
-    "print(\"minPositiveMSE\",minPositiveMSE)\n",
-    "print(\"maxNegativeMSE\",maxNegativeMSE)\n",
-    "print(\"Threshold is \", thre)\n",
-    "print(\"Precision by threshold is: \", precisionThre)\n",
-    "print(\"Recall by threshold is: \", recallThre)"
+    "modelType = \"lstm\"\n",
+    "testSet, testSetLabels = buildAdversarialDataSet(modelType)\n",
+    "precision, recall, precisionThre, recallThre, thre, minPositiveMSE, maxNegativeMSE = mb.testModel(testSet, testSetLabels, modelType)\n",
+    "thresholds[modelType + \"_adv\"] = thre"
    ]
   },
   {
