--- a/save_config.ipynb
+++ b/save_config.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pickle\n",
-    "from utilities import *"
+    "from MZPackage.Utilities import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSet = loadData(\"normalized_data_set\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataSet = loadData(\"normalized_data_set\")\n",
     "dataSetSize = dataSet.shape[0]\n",
     "testSetBenignSize = int(dataSetSize/10)\n",
     "validationSetSize = int(dataSetSize/10)\n",
@@ -39,9 +30,11 @@
     "          \"sequenceLen\":sequenceLen,\n",
     "          \"dimensionsCount\":dimensionsCount,\n",
     "          \"attackSamplesCount\": 1000,          \n",
-    "          \"adversarialTestSetSize\" : 250\n",
+    "          \"adversarialTestSetSize\" : 250,\n",
+    "          \"rawDataDir\" : \"Raw_Data\"\n",
     "         }\n",
-    "saveData(config, \"config\")"
+    "saveData(config, \"config\")\n",
+    "del dataSet"
    ]
   },
   {
